php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #8258 fgetcsv() fails with empty tab delimited fields
Submitted: 2000-12-14 08:28 UTC Modified: 2000-12-14 09:21 UTC
From: hartmut at six dot de Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 4.0.3pl1 OS: *
Private report: No CVE-ID: None
 [2000-12-14 08:28 UTC] hartmut at six dot de
from the manual annotations to fgetcsv(): 
(reported by poc@baden-online.de)

fgetcsv() seems to ignore zero-length fields when working 
with tabs as separators (3.0.12). 
Instead work around this with fgets() and do an explode() 
afterwards, this gets you the right thing.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-12-14 09:21 UTC] hholzgra@php.net
fixed in cvs
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Aug 26 14:00:01 2026 UTC