fgetcsv() will now work correct with empty fields in tab delimited files # fix for bug #8258 and regression test